--- a/main.css
+++ b/main.css
@@ -12,9 +12,33 @@ p {
     flex-wrap: wrap;
     width: 80%;
     margin: auto;
+    justify-content: space-around;
 }
 
 .card {
     margin: 10px;
     
+}
+
+#index {
+    color: blue;
+    text-align: center;
+}
+
+#css {
+    color: blueviolet;
+    text-align: center;
+}
+
+#js {
+    text-align: center;
+    color: white;
+}
+
+.css-page {
+    background-color: burlywood;
+}
+
+.js-page {
+    background-color: darkcyan;
 }
